[package]
name = "codepot"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
color-eyre = "0.6.3"
ipnet = { version = "2.9.0", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
scopeguard = "1.2.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tempfile = "3.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
